--- a/portfolio.html
+++ b/portfolio.html
@@ -7,13 +7,7 @@
     <title>HW03</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
-    integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
-  />
+    <link rel="stylesheet" href="./css/modern-normalize.min.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
@@ -37,9 +31,17 @@
         </nav>
         <div class="contact-menu">
           <a class="contact-header" href="mailto:info@devstudio.com">
+            <svg class="contact-icon" width="16" height="12">
+              <use href="./images/icons.svg#icon-envelope"></use>
+            </svg>
             info@devstudio.com
           </a>
-          <a class="contact-header" href="tel:+48111111111">+48 111 111 111</a>
+          <a class="contact-header" href="tel:+48111111111"
+            ><svg class="contact-icon" width="10" height="16">
+              <use href="./images/icons.svg#icon-smartphone"></use>
+            </svg>
+            +48 111 111 111</a
+          >
         </div>
       </div>
     </header>
@@ -55,7 +57,7 @@
         </ul>
 
         <ul class="portfolio-graphic-list" >
-          <li>
+          <li class="portfolio-graphic-item">
             <figure>
               <img
               
@@ -72,7 +74,7 @@
               </figcaption>
             </figure>
           </li>
-          <li>
+          <li class="portfolio-graphic-item">
             <figure>
               <img
                 src="./images/portfolio/bascetball-game.jpg"
@@ -88,7 +90,7 @@
               </figcaption>
             </figure>
           </li>
-          <li>
+          <li class="portfolio-graphic-item">
             <figure>
               <img
                 src="./images/portfolio/seafood-logo.jpg"
@@ -104,7 +106,7 @@
               </figcaption>
             </figure>
           </li>
-          <li>
+          <li class="portfolio-graphic-item">
             <figure>
               <img
                 src="./images/portfolio/headphones.jpg"
@@ -120,7 +122,7 @@
               </figcaption>
             </figure>
           </li>
-          <li>
+          <li class="portfolio-graphic-item">
             <figure>
               <img
                 src="./images/portfolio/boxes.jpg"
@@ -136,7 +138,7 @@
               </figcaption>
             </figure>
           </li>
-          <li>
+          <li class="portfolio-graphic-item">
             <figure>
               <img
                 src="./images/portfolio/monitor.jpg"
@@ -152,7 +154,7 @@
               </figcaption>
             </figure>
           </li>
-          <li>
+          <li class="portfolio-graphic-item">
             <figure>
               <img
                 src="./images/portfolio/magazine.jpg"
@@ -168,7 +170,7 @@
               </figcaption>
             </figure>
           </li>
-          <li>
+          <li class="portfolio-graphic-item">
             <figure>
               <img
                 src="./images/portfolio/label.jpg"
@@ -184,7 +186,7 @@
               </figcaption class="graphic-descrtiption">
             </figure>
           </li>
-          <li>
+          <li class="portfolio-graphic-item">
             <figure>
               <img
                 src="./images/portfolio/business-laptop.jpg"
@@ -205,17 +207,47 @@
       </section>
     </main>
     <footer class="footer-section">
-      <div class="container">
-        <a class="footer-logo" href="index.html">Web<span>Studio </span></a>
-        <address>
-          <p>m. Warszawa, Aleje Jerozolimskie 21</p>
+      <div class="container footer-container">
+        <div class="footer-block-1">
+          <a class="footer-logo" href="index.html">Web<span>Studio </span></a>
+          <address>
+            <p>m. Warszawa, Aleje Jerozolimskie 21</p>
 
-          <a class="contact-footer" href="mailto:info@devstudio.com">
-            info@devstudio.com
-          </a>
+            <a class="contact-footer" href="mailto:info@devstudio.com">
+              info@devstudio.com
+            </a>
 
-          <a class="contact-footer" href="tel:+48111111111">+48 111 111 111</a>
-        </address>
+            <a class="contact-footer" href="tel:+48111111111"
+              >+48 111 111 111</a
+            >
+          </address>
+        </div>
+
+        <div class="footer-block-2">
+          <h3>DOŁĄCZ DO NAS</h3>
+          <ul class="social-links-team">
+            <li class="social-links-team-space">
+              <svg class="social-icon-footer" width="20" height="20">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </li>
+            <li class="social-links-team-space">
+              <svg class="social-icon-footer" width="20" height="20">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </li>
+            <li class="social-links-team-space">
+              <svg class="social-icon-footer" width="20" height="20">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </li>
+            <li class="social-links-team-space">
+              <svg class="social-icon-footer" width="20" height="20">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
